@@ -26,3 +26,4 @@ Changes in version 1.3.x
 + renamed calculateUniFrac to calculateUnifrac 
 + added na.rm option to getTopTaxa function   
 + bugfix: makeTreeSEFromPseq -- orientation of assay is taken into account
++ bugfix: getExperimentCrossCorrelation's "matrix"" mode works with features named equally
